[tool.poetry]
name = "queueforbsac"
version = "0.1.0"
description = ""
authors = ["Dmitriy <vysotskij08@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.116.1"}
uvicorn = {extras = ["standart"], version = "^0.37.0"}
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
asyncpg = "^0.30.0"
python-dotenv = "^1.1.1"
alembic = "^1.16.5"
asyncio = "^4.0.0"
websockets = "^15.0.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
